--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://kit.fontawesome.com/a576612222.css" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <title>Silicon</title>
 </head>
 <body>
-  
+  <div class="wrapper">
+    <header>
+      <div class="container">
+
+        <a id="logo" href="index.html"><img src="/Images/Logo.svg" alt="Silicon Logotype"></a>
+
+          <nav id="main-menu" class="navbar">
+            <a class="nav-link" href="#">Features</a>
+          </nav>
+
+          <div id="darkmode-toggle-switch" class="btn-toggle-switch">
+            <span class="label">Dark mode</span>
+              <label for="darkmode-switch" class="toggle-switch">
+                <input id="darkmode-switch" type="checkbox">
+                <span class="slider round"></span>
+              </label>
+          </div>
+
+          <a id="auth-signin" href="#" class="btn-primary">
+            <i class="fa-thin fa-user fa-flip-horizontal"></i>
+            <span>Sign in / up</span>
+          </a>
+      </div>
+    </header>
+
+
+  </div>
 </body>
 </html>
