Första section på webbsidan

--- a/index.html
+++ b/index.html
@@ -32,7 +32,33 @@
           </a>
       </div>
     </header>
+    <main>
+      <section id="hero">
+        <div class="container">
+          <div class="headline">
+            <h1>Manage All Your Money in One App</h1>
+          </div>
+          <div class="content">
+            <p>We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket.</p>
+            <div class="buttons">
+              <a class="btn-download-app" href="#"><img src="/Images/appstore.svg" alt="appstore"></a>
+              <a class="btn-download-app" href="#"><img src="/Images/googleplay.svg" alt="googleplay"></a>
+            </div>
 
+            <a href="#" class="discover-more">
+              <span class="btn-circle">
+                <i class="fa-light fa-circle-chevron-down"></i>
+              </span>
+              <span>Discover more</span>
+            </a>
+          </div>
+          <div class="images">
+            <img class="img-back" src="Images/Iphoneleft.svg" alt="Iphoneleft">
+            <img class="img-front" src="Images/iPhoneright.svg" alt="iPhoneright">
+          </div>
+        </div>
+      </section>
+    </main>
 
   </div>
 </body>
