--- a/index.html
+++ b/index.html
@@ -58,6 +58,33 @@
           </div>
         </div>
       </section>
+
+      <section id="brands">
+        <div class="container">
+          <div id="brand-1" class="brand-box">
+            <img src="/Images/brand-1.svg" alt="">
+          </div>
+          <div id="brand-2" class="brand-box">
+            <img src="/Images/brand-2.svg" alt="">
+          </div>
+          <div id="brand-3" class="brand-box">
+            <img src="/Images/brand-3.svg" alt="">
+          </div>
+          <div id="brand-4" class="brand-box">
+            <img src="/Images/brand-4.svg" alt="">
+          </div>
+          <div id="brand-5" class="brand-box">
+            <img src="/Images/brand-5.svg" alt="">
+          </div>
+          <div id="brand-6" class="brand-box">
+            <img src="/Images/brand-6.svg" alt="">
+          </div>
+        </div>
+      </section>
+
+
+
+
     </main>
 
   </div>
