feature sektion completed

--- a/index.html
+++ b/index.html
@@ -82,6 +82,75 @@
         </div>
       </section>
 
+      <section class="features">
+        <div class="container">
+          <div class="iphone">
+            <img src="/Images/Iphone-sided.svg" alt="">
+          </div>
+          <div class="text">
+            <h2>App Features</h2>
+            <p id="padding-top-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+            <div class="features-grid">
+
+              <div class="feature-card">
+                <div class="icon-container">
+                  <img src="/Images/feature-1.svg" alt="">
+                </div>
+                <div>
+                  <h3>Easy Payments</h3>
+                  <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo. </p>
+                </div>
+              </div>
+              <div class="feature-card">
+                <div class="icon-container">
+                  <img src="/Images/feature-4.svg" alt="">
+                </div>
+                <div>
+                  <h3>Data Security</h3>
+                  <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
+                </div>
+              </div>
+              <div class="feature-card">
+                <div class="icon-container">
+                  <img src="/Images/feature-2.svg" alt="">
+                </div>
+                <div>
+                  <h3>Cost Statistics</h3>
+                  <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
+                </div>
+              </div>
+              <div class="feature-card">
+                <div class="icon-container">
+                  <img src="/Images/feature-5.svg" alt="">
+                </div>
+                <div>
+                  <h3>Support 24/7</h3>
+                  <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
+                </div>
+              </div>
+              <div class="feature-card">
+                <div class="icon-container">
+                  <img src="/Images/feature-3.svg" alt="">
+                </div>
+                <div>
+                  <h3>Regular Cashback</h3>
+                  <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.</p>
+                </div>
+              </div>
+              <div class="feature-card">
+                <div class="icon-container">
+                  <img src="/Images/feature-6.svg" alt="">
+                </div>
+                <div>
+                  <h3>Top Standards</h3>
+                  <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.</p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
