--- a/index.html
+++ b/index.html
@@ -151,7 +151,28 @@
           </div>
         </div>
       </section>
+      <section class="carousel-section">
+        <div class="container space">
+          <h2>How does It Work?</h2>
 
+          <div class="carousel">
+            <div class="carousel-item">
+              <img src="Images/iPhone-left.svg" alt="">
+            </div>
+            <div class="carousel-item">
+              <img src="Images/iPhone-middle.svg" alt="">
+            </div>
+            <div class="carousel-item">
+              <img src="Images/iPhone-right.svg" alt="">
+            </div>
+          </div>
+
+          <div class="text">
+            <h3>Latest transaction history</h3>
+            <p>Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in consectetur condimentum.</p>
+          </div>
+        </div>
+      </section>
 
 
     </main>
