Earning/Contact sektion completed

--- a/index.html
+++ b/index.html
@@ -175,6 +175,56 @@
       </section>
 
 
+
+
+
+
+
+      <section class="container">
+        <div class="grid2-2">
+          <div class="box-1">
+            <h2>Make your money transfer simple and clear</h2>
+            <ul>
+              <li>
+                <p><i class="fa-regular fa-circle-check" style="color: #6366F1;"></i> transactions are free for you</p>
+              </li>
+              <li>
+                <p><i class="fa-regular fa-circle-check" style="color: #6366F1;"></i> No monthly cash commission</p>
+              </li>
+              <li>
+                <p><i class="fa-regular fa-circle-check" style="color: #6366F1;"></i> Manage payments and transactions online</p>
+              </li>
+            </ul>
+            <img class="btn-grid" src="Images/blue-button.svg" alt="">
+          </div>
+          <div>
+            <img src="Images/Earning.svg" alt="">
+          </div>
+          <div>
+            <img src="Images/Contacts.svg" alt="">
+          </div>
+          <div class="box-2">
+            <h2>Receive payment from international bank details</h2>
+            <div class="flex">
+              <div>
+                <div class="icon-container">
+                  <img src="/Images/feature-1.svg" alt="">
+                </div>
+                <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
+              </div>
+              <div>
+               <div class="icon-container">
+                 <img src="/Images/feature-3.svg" alt="">
+               </div>
+               <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
+              </div>
+           </div>
+            <img class="btn-grid" src="Images/blue-button.svg" alt="">
+          </div>
+
+        </div>
+
+      </section>
     </main>
 
   </div>
