rating section complete

--- a/index.html
+++ b/index.html
@@ -225,6 +225,35 @@
         </div>
 
       </section>
+
+
+      <section class="rating-container">
+        <div class="container">
+          <div class="flex">
+          <div>
+            <h2>Clients are Loving Our App</h2>
+          </div>
+            <div class="box-1">
+              <img class="quotes" src="Images/quotes.svg" alt="">
+              <img class="stars" src="Images/Fannyrating.svg" alt="">
+              <p>Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere rhoncus, egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo turpis sit amet.</p>
+              <img class="avatar" src="Images/Fannie.svg" alt="">
+            </div>
+            <div class="box-2">
+              <img class="quotes" src="Images/quotes.svg" alt="">
+              <img class="stars" src="Images/Albertrating.svg" alt="">
+              <p>Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.</p>
+              <img class="avatar" src="Images/Albert.svg" alt="">
+            </div>
+            <div>
+
+            </div>
+          </div>
+        </div>
+
+
+
+      </section>
     </main>
 
   </div>
