--- a/index.html
+++ b/index.html
@@ -254,6 +254,61 @@
 
 
       </section>
+
+      <section class="faq">
+        <div class="container grid">
+          <div>
+            <h2>Any questions?<br> Check out the FAQs</h2>
+            <p>Still have unanswered questions and need to get <br> in touch?</p>
+          
+            <div class="flex-container">
+              <div class="blue-theme">
+                <img src="Images/telefon.svg" alt="">
+                <span>Still have questions?</span>
+                <p>Contact us <i class="fa-solid fa-arrow-right" style="color: #6366F1"></i> </p>
+              </div>
+              <div class="green-theme">
+                <img src="Images/talkbubble.svg" alt="">
+                <span>Don't like phone calls?</span>
+                <p>Contact us <i class="fa-solid fa-arrow-right" style="color: #22C55E;"></i></p>
+              </div>
+            </div>
+          </div>
+          <div class="accordian">
+            <div class="panel">
+              <img src="Images/whitearrow.svg" alt="">
+              <span>Is any of my personal information stored in the App?</span>
+            </div>
+            <div class="panel">
+              <img src="Images/whitearrow.svg" alt="">
+              <span>What formats can I download my transaction history in?</span>
+            </div>
+            <div class="panel">
+              <img class="bluearrow" src="Images/bluearrow.svg" alt="">
+              <span>Can I schedule future transfers?</span>
+              <p>Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper. Viverra aliquam arcu, viverra et, cursus. Aliquet pretium cursus adipiscing gravida et consequat lobortis arcu velit. Nibh pharetra fermentum duis accumsan lectus non. Massa cursus molestie lorem scelerisque pellentesque. Nisi, enim, arcu purus gravida adipiscing euismod montes, duis egestas. Vehicula eu etiam quam tristique tincidunt suspendisse ut consequat.</p>
+            </div>
+            <div class="panel">
+              <img src="Images/whitearrow.svg" alt="">
+              <span>When can I use Banking App services?</span>
+            </div>
+            <div class="panel">
+              <img src="Images/whitearrow.svg" alt="">
+              <span>Can I create my own password that is easy for me to remember?</span>
+            </div>
+            <div class="panel">
+              <img src="Images/whitearrow.svg" alt="">
+              <span>What happens if I forget or lose my password?</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="Subscribe">
+        <div class="container flex">
+          
+        </div>
+      </section>
     </main>
 
   </div>
