--- a/index.html
+++ b/index.html
@@ -304,9 +304,14 @@
         </div>
       </section>
 
-      <section class="Subscribe">
-        <div class="container flex">
-          
+      <section class="subscribe">
+        <div class="container">
+          <img src="Images/notification.svg" alt="">
+          <h2>Subscribe to our newsletter to stay informed about latest updates</h2>
+          <div class="subscribe-group">
+            <input class="subscribe-form email" type="email" placeholder="Your Email">
+            <button class="btns">Subscribe</button>
+          </div>
         </div>
       </section>
     </main>
