footer är klar och justerat html från mallen

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Manage All Your Money in One App</h1>
           </div>
           <div class="content">
-            <p>We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket.</p>
+            <p>We offer you a new generation of the mobile banking.<br> Save, spend & manage money in your pocket.</p>
             <div class="buttons">
               <a class="btn-download-app" href="#"><img src="/Images/appstore.svg" alt="appstore"></a>
               <a class="btn-download-app" href="#"><img src="/Images/googleplay.svg" alt="googleplay"></a>
@@ -47,7 +47,7 @@
 
             <a href="#" class="discover-more">
               <span class="btn-circle">
-                <i class="fa-light fa-circle-chevron-down"></i>
+                <img src="Images/discovermorebtn.svg" alt="">
               </span>
               <span>Discover more</span>
             </a>
@@ -183,10 +183,10 @@
       <section class="container">
         <div class="grid2-2">
           <div class="box-1">
-            <h2>Make your money transfer simple and clear</h2>
+            <h2>Make your money<br> transfer simple and clear</h2>
             <ul>
               <li>
-                <p><i class="fa-regular fa-circle-check" style="color: #6366F1;"></i> transactions are free for you</p>
+                <p><i class="fa-regular fa-circle-check" style="color: #6366F1;"></i>Banking transactions are free for you</p>
               </li>
               <li>
                 <p><i class="fa-regular fa-circle-check" style="color: #6366F1;"></i> No monthly cash commission</p>
@@ -314,7 +314,14 @@
           </div>
         </div>
       </section>
+
     </main>
+    <footer>
+      <div class="container">
+        <p class="copy">© 2024 Silicon. All rights reserved. Credit MadrasThemes</p>
+
+      </div>
+    </footer>
 
   </div>
 </body>
