--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <a id="logo" href="index.html"><img src="/Images/Logo.svg" alt="Silicon Logotype"></a>
 
-          <nav id="main-menu" class="navbar">
+          <nav>
             <a class="nav-link" href="#">Features</a>
           </nav>
 
