justerat css/html

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
       <div class="container">
 
-        <a id="logo" href="index.html"><img src="/Images/Logo.svg" alt="Silicon Logotype"></a>
+        <a id="silicon-logo" href="index.html"><img src="/Images/Logo.svg" alt="Logotype"></a>
 
           <nav>
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-features" href="#">Features</a>
           </nav>
 
           <div id="darkmode-toggle-switch" class="btn-toggle-switch">
@@ -33,18 +33,19 @@
       </div>
     </header>
     <main>
+
       <section id="hero">
         <div class="container">
-          <div class="headline">
+          <div class="manage">
             <h1>Manage All Your Money in One App</h1>
           </div>
-          <div class="content">
+
+          <div class="iphones">
             <p>We offer you a new generation of the mobile banking.<br> Save, spend & manage money in your pocket.</p>
-            <div class="buttons">
+            <div class="mobile-buttons">
               <a class="btn-download-app" href="#"><img src="/Images/appstore.svg" alt="appstore"></a>
               <a class="btn-download-app" href="#"><img src="/Images/googleplay.svg" alt="googleplay"></a>
             </div>
-
             <a href="#" class="discover-more">
               <span class="btn-circle">
                 <img src="Images/discovermorebtn.svg" alt="">
@@ -52,12 +53,14 @@
               <span>Discover more</span>
             </a>
           </div>
+
           <div class="images">
             <img class="img-back" src="Images/Iphoneleft.svg" alt="Iphoneleft">
-            <img class="img-front" src="Images/iPhoneright.svg" alt="iPhoneright">
+            <img class="img-front" src="Images/iPhoneright.svg" alt="Iphoneright">
           </div>
         </div>
       </section>
+
 
       <section id="brands">
         <div class="container">
