justerat css/html

--- a/index.html
+++ b/index.html
@@ -62,32 +62,32 @@
       </section>
 
 
-      <section id="brands">
+      <section id="sponsor">
         <div class="container">
-          <div id="brand-1" class="brand-box">
-            <img src="/Images/brand-1.svg" alt="">
+          <div class="sponsor-box">
+            <img src="/Images/Ogo.svg" alt="">
           </div>
-          <div id="brand-2" class="brand-box">
-            <img src="/Images/brand-2.svg" alt="">
+          <div class="sponsor-box">
+            <img src="/Images/Logoupsum1.svg" alt="">
           </div>
-          <div id="brand-3" class="brand-box">
-            <img src="/Images/brand-3.svg" alt="">
+          <div class="sponsor-box">
+            <img src="/Images/Logoipsum2.svg" alt="">
           </div>
-          <div id="brand-4" class="brand-box">
-            <img src="/Images/brand-4.svg" alt="">
+          <div class="sponsor-box">
+            <img src="/Images/Logoipsum3.svg" alt="">
           </div>
-          <div id="brand-5" class="brand-box">
-            <img src="/Images/brand-5.svg" alt="">
+          <div class="sponsor-box">
+            <img src="/Images/Logoipsum4.svg" alt="">
           </div>
-          <div id="brand-6" class="brand-box">
-            <img src="/Images/brand-6.svg" alt="">
+          <div id="brand-6" class="sponsor-box">
+            <img src="/Images/Logoipsum5.svg" alt="">
           </div>
         </div>
       </section>
 
       <section class="features">
         <div class="container">
-          <div class="iphone">
+          <div class="phone">
             <img src="/Images/Iphone-sided.svg" alt="">
           </div>
           <div class="text">
@@ -154,18 +154,18 @@
           </div>
         </div>
       </section>
-      <section class="carousel-section">
+      <section class="carousel">
         <div class="container space">
           <h2>How does It Work?</h2>
 
-          <div class="carousel">
-            <div class="carousel-item">
+          <div class="phones">
+            <div>
               <img src="Images/iPhone-left.svg" alt="">
             </div>
-            <div class="carousel-item">
+            <div>
               <img src="Images/iPhone-middle.svg" alt="">
             </div>
-            <div class="carousel-item">
+            <div>
               <img src="Images/iPhone-right.svg" alt="">
             </div>
           </div>
