klar med justeringar och projekt

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <header>
       <div class="container">
 
-        <a id="silicon-logo" href="index.html"><img src="/Images/Logo.svg" alt="Logotype"></a>
+        <a id="silicon-logo" href="#"><img src="/Images/Logo.svg" alt="Logotype"></a>
 
           <nav>
             <a class="nav-features" href="#">Features</a>
           </nav>
 
-          <div id="darkmode-toggle-switch" class="btn-toggle-switch">
-            <span class="label">Dark mode</span>
-              <label for="darkmode-switch" class="toggle-switch">
-                <input id="darkmode-switch" type="checkbox">
+          <div class="toggle-switch">
+            <span>Dark mode</span>
+              <label class="switch">
+                <input type="checkbox">
                 <span class="slider round"></span>
               </label>
           </div>
@@ -97,7 +97,7 @@
 
               <div class="feature-card">
                 <div class="icon-container">
-                  <img src="/Images/feature-1.svg" alt="">
+                  <img src="/Images/creditcard.svg" alt="">
                 </div>
                 <div>
                   <h3>Easy Payments</h3>
@@ -106,7 +106,7 @@
               </div>
               <div class="feature-card">
                 <div class="icon-container">
-                  <img src="/Images/feature-4.svg" alt="">
+                  <img src="/Images/shield.svg" alt="">
                 </div>
                 <div>
                   <h3>Data Security</h3>
@@ -115,7 +115,7 @@
               </div>
               <div class="feature-card">
                 <div class="icon-container">
-                  <img src="/Images/feature-2.svg" alt="">
+                  <img src="/Images/budget.svg" alt="">
                 </div>
                 <div>
                   <h3>Cost Statistics</h3>
@@ -124,7 +124,7 @@
               </div>
               <div class="feature-card">
                 <div class="icon-container">
-                  <img src="/Images/feature-5.svg" alt="">
+                  <img src="/Images/support.svg" alt="">
                 </div>
                 <div>
                   <h3>Support 24/7</h3>
@@ -133,7 +133,7 @@
               </div>
               <div class="feature-card">
                 <div class="icon-container">
-                  <img src="/Images/feature-3.svg" alt="">
+                  <img src="/Images/wallet.svg" alt="">
                 </div>
                 <div>
                   <h3>Regular Cashback</h3>
@@ -142,7 +142,7 @@
               </div>
               <div class="feature-card">
                 <div class="icon-container">
-                  <img src="/Images/feature-6.svg" alt="">
+                  <img src="/Images/smile.svg" alt="">
                 </div>
                 <div>
                   <h3>Top Standards</h3>
