Ändrade url för 2 bilder

--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
             <div class="flex">
               <div>
                 <div class="icon-container">
-                  <img src="/Images/feature-1.svg" alt="">
+                  <img src="/Images/creditcard.svg" alt="">
                 </div>
                 <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
               </div>
               <div>
                <div class="icon-container">
-                 <img src="/Images/feature-3.svg" alt="">
+                 <img src="/Images/wallet.svg" alt="">
                </div>
                <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
               </div>
